fix z-index bug

--- a/src/components/content-block/forms/aboutAurhorForm/aboutAurhorForm.scss
+++ b/src/components/content-block/forms/aboutAurhorForm/aboutAurhorForm.scss
@@ -169,7 +169,7 @@
 }
 
 .about-author__dropdown-menu {
-  z-index: 9999;
+  z-index: 99;
   width: 100%;
   position: absolute;
   top: 100%;
